--- a/FasTeamWebUI/FasTeamWebUI/Views/Home/Index.cshtml
+++ b/FasTeamWebUI/FasTeamWebUI/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
+﻿<div class="container-fluid" data-ng-app="ahApp">
+    <div class="row">
+        <form>
+            <div id="MainPage" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 main controlPanel" data-ng-view">
+            </div>
+        </form>
+    </div>
+</div>
 
