--- a/FasTeamWebUI/FasTeamWebUI/Views/Shared/_Layout.cshtml
+++ b/FasTeamWebUI/FasTeamWebUI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,17 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="icon" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+
+    <title>Fasds | Team Hodor</title>
+
+    <style type="text/css">
+        .wf-loading {
+            visibility: hidden;
+        }
+    </style>
+    <script src="https://use.fontawesome.com/8d8fa1da46.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -18,6 +28,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Test Name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
