Added AngularJS to front-end, includes basic service to be updated

--- a/FasTeamWebUI/FasTeamWebUI/Views/Home/Index.cshtml
+++ b/FasTeamWebUI/FasTeamWebUI/Views/Home/Index.cshtml
@@ -1,9 +1,13 @@
-﻿<div class="container-fluid" data-ng-app="ahApp">
-    <div class="row">
+﻿<div class="container-fluid">
+    <div class="row" ng-controller="appCtrl">
+        {{angularTitle}}
+        <input type="text" ng-model="helloAngular" />
+        <h1>{{helloAngular}}</h1>
         <form>
-            <div id="MainPage" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 main controlPanel" data-ng-view">
+            <div id="MainPage" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 main controlPanel" data-ng-view>
             </div>
         </form>
+        <button ng-click="addItem()">Add</button><button ng-click="getItems()">Get</button>
+        <div>{{returnValue}}</div>
     </div>
 </div>
-
