--- a/FasTeamWebUI/FasTeamWebUI/Views/Shared/_Layout.cshtml
+++ b/FasTeamWebUI/FasTeamWebUI/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     </style>
     <script src="https://use.fontawesome.com/8d8fa1da46.js"></script>
 </head>
-<body>
+<body data-ng-app="ahApp">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -47,5 +47,10 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/angular.js"></script>
+    <script src="~/Scripts/angular-route.min.js"> </script>
+    <script src="~/Scripts/App/Modules/app.js"></script>
+    <script src="~/Scripts/App/Controllers/appcontroller.js"></script>
+    <script src="~/Scripts/App/Services/dataservice.js"></script>
 </body>
 </html>
